# WoeUSB-ng

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  development.patch  requirements.txt  setup.cfg  setup.py
.github/: issue_template.md
.github/workflows/: greetings.yml  pytest.yml
WoeUSB/: __init__.py  core.py  gui.py  i18n.py  list_devices.py  miscellaneous.py  utils.py  woeusb  woeusbgui  workaround.py
WoeUSB/locale/: woeusb.pot
WoeUSB/locale/de/LC_MESSAGES/: woeusb.mo  woeusb.po
WoeUSB/locale/fr/LC_MESSAGES/: woeusb.mo  woeusb.po
WoeUSB/locale/pl/LC_MESSAGES/: woeusb.mo  woeusb.po
WoeUSB/locale/pt_BR/LC_MESSAGES/: woeusb.po
WoeUSB/locale/sv/LC_MESSAGES/: woeusb.po
WoeUSB/locale/tr/LC_MESSAGES/: woeusb.mo
WoeUSB/locale/zh/LC_MESSAGES/: woeusb.mo  woeusb.po
WoeUSB/tests/: test.py
WoeUSB/tests/mocks/: mock_os.py
doc/: conf.py
miscellaneous/: WoeUSB-ng.desktop  com.github.woeusb.woeusb-ng.policy
src/WoeUSB/: core.py  gui.py  miscellaneous.py
src/WoeUSB/locale/fr/LC_MESSAGES/: woeusb.mo
src/WoeUSB/locale/pt_BR/LC_MESSAGES/: woeusb.mo
src/WoeUSB/locale/sv/LC_MESSAGES/: woeusb.mo
src/WoeUSB/locale/tr/LC_MESSAGES/: woeusb.po
tests/: test_utils.py
