[metadata]
name = woeusb-ng
version = 0.2.12
author = Jakub Szymański
author_email = jakubmateusz@poczta.onet.pl
description = WoeUSB-ng is a simple tool that enable you to create your own usb stick windows installer from an iso image or a real DVD. This is a rewrite of original WoeUSB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WoeUSB/WoeUSB-ng
project_urls =
    Bug Tracker = https://github.com/WoeUSB/WoeUSB-ng/issues
classifiers =
    Development Status :: 5 - Production/Stable
	Environment :: X11 Applications :: GTK
	Intended Audience :: End Users/Desktop
	License :: OSI Approved
	 :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Topic :: System :: Operating System

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
	woeusbgui = WoeUSB.gui:run
console_scripts = 
	woeusb = WoeUSB.core:run
